# flask-workshop

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml
migrations/versions/: 0375e9d4b49b_.py  0ea449b50237_.py  26fd0488bf94_.py  4cfdd6b7abf3_.py  a05486377bc0_.py  b49319692b3b_.py  ed72b322dcb4_.py  fe913859c8f0_.py  fe937b5d9e99_.py
src/: setup_db.sql
src/workshop/: app.py  forms.py  main.py  models.py  routes.py
src/workshop/static/css/: output.css
src/workshop/templates/: base.html  index.html
src/workshop/templates/car/: index.html  new.html  show.html
src/workshop/templates/client/: index.html  new.html  show.html
src/workshop/templates/job/: index.html  new.html  show.html
